
### Code generation and optimizations:

### Standard library:

- #13728: Add Sys.runtime_executable containing the full path (if available) to
  the currently executing runtime.
  (David Allsopp, review by Nicolás Ojeda Bär and Daniel Bünzli)

- #13916: Add Option.product and Option.Syntax.
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Gabriel Scherer and David
  Allsopp)

### Type system:

- #13781: Set scope of internal type nodes during abbreviation expansion
  rather than recursing during unification.
  (Jacques Garrigue, review by Gabriel Scherer)

* #13830: fail rather than silently create abstract module types when avoiding
  (i.e. hiding) signature items, as in:
  ```ocaml
    module N = struct
      open (struct type t = A | B end)
      module type T = sig type u = t * int end
    end
  ```
  Before, it was succeeding with `module N : sig module type T end`, now it
  fails. Similarly for anonymous functor calls (of the form `F(struct ... end))
  (Clement Blaudeau, review by Gabriel Scherer)

### Other libraries:

* #14046: On Windows, `Unix.kill pid Sys.sigkill` causes the receiving process
  to exit with code ERROR_PROCESS_ABORTED (1067) instead of 0.
  (Nicolás Ojeda Bär, review by Miod Vallat, Antonin Décimo and David Allsopp)

- #14020: Add Unix.unsetenv.
  (Nicolás Ojeda Bär, review by Antonin Décimo and David Allsopp)

### Tools:

- #12139: BUILD_PATH_PREFIX_MAP rewriting in debug-event locations.
  (Richard L. Ford, review by Gabriel Scherer)

* #13638: ocamlmklib exits with code 4 if passed an unrecognised option, as it
  does with an unrecognised file.
  (David Allsopp, review by Antonin Décimo and Sébastien Hinderer)

- #13941, #13961: Fix `ocamltest` variable handing.
  (Damien Doligez, report by Olivier Nicole, review by Gabriel Scherer)

- #13962: Little ocamltest refactors. Fix error handling in C code,
  leaking file descriptors, code style.
  (Antonin Décimo, review by Gabriel Scherer)
